        - Fix infinite loop on ->svp_release("nonexistent_savepoint") (GH#97)
        - Fix spurious ROLLBACK statements when a TxnScopeGuard fails a commit
          of a transaction with deferred FK checks: a guard is now inactivated
          immediately before the commit is attempted (RT#107159)
        - Fix spurious warning on MSSQL cursor invalidation retries (RT#102166)
        - Remove spurious exception warping in ::Replicated::execute_reliably
          (RT#113339)
        - Work around unreliable $sth->finish() on INSERT ... RETURNING within
          DBD::Firebird on some compiler/driver combinations (RT#110979)
        - Fix leaktest failures with upcoming version of Sub::Quote
        - Really fix savepoint rollbacks on older DBD::SQLite (fix in 0.082800
          was not sufficient to cover up RT#67843)

    * Misc
        - Typo fixes from downstream debian packagers (RT#112007)

0.082821 2016-02-11 17:58 (UTC)
    * Fixes
        - Fix t/52leaks.t failures on compilerless systems (RT#104429)
        - Fix t/storage/quote_names.t failures on systems with specified Oracle
          test credentials while missing the optional Math::Base36
        - Fix test failures when DBICTEST_SYBASE_DSN is set (unnoticed change
          in error message wording during 0.082800 and a bogus test)
        - Remove largely obsolete test of SQLite view deployment (RT#111916)

    * Misc
        - Work around rare test deadlock under heavy parallelism (RT#108390)

0.082820 2015-03-20 20:35 (UTC)
    * Fixes
        - Protect destructors from rare but possible double execution, and
          loudly warn the user whenever the problem is encountered (GH#63)
        - Relax the 'self_result_object' argument check in the relationship
          resolution codepath, restoring exotic uses of inflate_result
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011876.html
        - Fix updating multiple CLOB/BLOB columns on Oracle